- Added Geo Location for user - Added more discovery and account process tests
