# server/api/controllers/discovery/discovery.router.js
@@ -1,6 +1,6 @@
 import * as express from 'express';
 import controller from './discovery.controller';
-
+const mongoose = require('mongoose');
 // API request validatorup
 const { check } = require('express-validator/check');
 
@@ -9,4 +9,4 @@ const validateAccountId = check('accountId', 'Enter a valid account ID').custom(
 export default express
   .Router()
   .get('/myAccountId/:myAccountId', controller.discover)
-  .post('/hide', [validateAccountId], controller.hideUser);
+  .post('/hide/initiator/:initiatorAccountId/receiver/:receiverAccountId', [validateAccountId], controller.hideUser);
